--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,6 @@
   --hero-text-size-mobile: 18px;
 
   /* DESKTOP */
-
-
-  
-
 }
 
 body {
@@ -50,7 +46,6 @@ body {
   max-width: 480px;
   margin: 0 auto;
   padding: 0px 10px 15px 10px;
-  border: 1px solid red;
 }
 
 .backdrop {
@@ -93,7 +88,8 @@ nav .header__links__mobile {
   display: block;
   width: 70%;
   height: 100%;
-  background: #042331;
+  /* background: #042331; */
+  background: #140a47;;
   color: #fff;
   line-height: 40px;
   padding-top: 92px;
