--- a/src/index.css
+++ b/src/index.css
@@ -89,8 +89,9 @@ nav .header__links__mobile {
   width: 70%;
   height: 100%;
   /* background: #042331; */
-  background: #0a0429;
-  /* background: #000235; */
+  /* background: #0a0429; */
+  background: #000235;
+  /* background: #00002d; */
   color: #fff;
   line-height: 40px;
   padding-top: 92px;
