--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,11 @@ body {
   color: var(--text-color);
   font-size: var(--text-sizing);
 }
-
+.app {
+  scroll-snap-type: y mandatory;
+  overflow: scroll;
+  height: 100vh;
+}
 /* MOBILE STYLING */
 .main__content {
   max-width: 480px;
@@ -111,9 +115,9 @@ nav .header__links__mobile {
 .header__links__mobile > li:last-child {
   border-bottom: 1px solid rgba(159, 154, 154, 0.1);
 }
-.show__nav > .mobile__icon {
+/* .show__nav > .mobile__icon {
   display: none;
-}
+} */
 .show__nav > .header__links__mobile {
   right: 0;
 }
@@ -170,6 +174,16 @@ nav .close__nav {
   color: var(--heading-color);
   font-size: var(--other-heading-mobile);
 }
+.tech__skills > .cards__slider {
+  display: flex;
+  overflow-x: auto;
+  max-width: 100%;
+  white-space: nowrap;
+}
+.cards__slider > .cards {
+  min-width: 100%;
+}
+
 /* .tech__container::-webkit-scrollbar {
   width: 0;
 } */
@@ -181,11 +195,36 @@ nav .close__nav {
   font-size: var(--other-heading-mobile);
 }
 
+.projects > .projects__slider {
+  display: flex;
+  overflow-x: auto;
+  max-width: 100%;
+  white-space: nowrap;
+}
+.projects__slider > .project__cards {
+  min-width: 100%;
+}
+
 /* Contact section  */
-.contact > h2 {
+ h2 {
   font-family: var(--all-headings);
   color: var(--heading-color);
   font-size: var(--other-heading-mobile);
+}
+
+.contact {
+  padding: 20px;
+}
+/* 
+.contact > .contact__content {
+  padding: 10px;
+} */
+
+.contact__socials {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 20px;
 }
 
 /* DESKTOP STYLING */
@@ -195,8 +234,7 @@ nav .close__nav {
     width: 1440px;
     max-width: 1065px;
     margin: 0 auto;
-    padding: 0px;
-    /* border: 1px solid red; */
+    padding: 0px 0px 20px 0px;
   }
 
   .mobile__bg__circle {
@@ -239,8 +277,6 @@ nav .close__nav {
     align-items: space;
     justify-content: space-between;
     gap: 100px;
-    /* height: 100vh; */
-    /* margin-top: 0px; */
   }
   .hero__section > img {
     width: 450px;
@@ -251,25 +287,20 @@ nav .close__nav {
     order: -1;
   }
 
-  /* CONTACT SECTION  */
+  /* ABOUT ME SECTION  */
   .about__me {
     margin-top: 0;
   }
   .about__content {
     position: relative;
     display: grid;
+    gap: 50px;
     grid-template-columns: 1fr 2fr;
     justify-content: space-between;
     align-items: center;
     margin-top: 24px;
   }
-  .about__me > h2 {
-    font-family: var(--all-headings);
-    color: var(--heading-color);
-    font-size: var(--other-heading-mobile);
-  }
-
-  .about__text > p {
+   .about__text > p {
     margin-top: 24px;
   }
 
@@ -290,9 +321,62 @@ nav .close__nav {
     padding: 0px;
   }
 
-  /* TECHNOLOGY SECTION  */
+  /* SKILLS SECTION  */
+  .tech__skills > .cards__slider {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    overflow-x: none;
+    padding: 15px;
+    margin-top: 24px;
+  }
+  .cards__slider > .cards {
+    transition: 0.5s all ease-in-out;
+  }
+  .cards__slider > .cards:hover {
+    transform: scale(1.05);
+  }
 
   /* PROJECTS SECTIONS  */
+  
+  .projects__slider > .project__cards {
+    min-width: 420px;
+
+  }
 
   /* CONTACT SECTION  */
+  .contact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    justify-content: center;
+    align-items: start;
+    padding: 40px;
+  }
+
+  .contact__content {
+    display: flex;
+    flex-direction: column;
+    background: transparent;
+  }
+
+  .contact__info {
+    background: rgb(28, 33, 37);
+    padding: 20px;
+    border-radius: 20px;
+  }
+
+
+
+  .contact > .contact__socials {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 0;
+   
+  }
+  .contact__socials > .socials__icons {
+    padding: 20px 20px 20px 0;
+
+  }
 }
