update contact page design

--- a/src/index.css
+++ b/src/index.css
@@ -360,11 +360,11 @@ nav .close__nav {
     background: transparent;
   }
 
-  .contact__info {
+  /* .contact__info {
     background: rgb(28, 33, 37);
     padding: 20px;
     border-radius: 20px;
-  }
+  } */
 
 
 
