adjust text sizing on contact

--- a/src/index.css
+++ b/src/index.css
@@ -257,6 +257,7 @@ nav .close__nav {
   justify-content: flex-start;
   align-items: center;
   margin-top: 20px;
+  padding-left: 0;
 }
 
 /* DESKTOP STYLING */
